test/tests/errors/error-file-reset-wrong-arg-count.sm
// true
// false
// false
/**/
/**/

program{
    file f withbuffer bf: int;
    reset(f, bf);
}